30-sg-rules/main.tf
# Backend ALB accepting traffic from bastion
# resource "aws_security_group_rule" "backend_alb_bastion" {
#   type              = "ingress"
#   from_port         = 80
#   to_port           = 80
#   protocol          = "tcp"
#   security_group_id = local.backend_alb_sg_id  # Backend alb SG
#   source_security_group_id = local.bastion_sg_id  # bastion SG
# }

# Bastion accepting traffic from my laptop
resource "aws_security_group_rule" "bastion_laptop" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = local.bastion_sg_id  # Bastion SG
  cidr_blocks       =  ["0.0.0.0/0"]
}


# MongoDB accepting connections from bastion
resource "aws_security_group_rule" "mongodb_bastion" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = local.mongodb_sg_id  # mongodb SG
  source_security_group_id = local.bastion_sg_id # Bastion sg
}


# Redis accepting connections from bastion
resource "aws_security_group_rule" "redis_bastion" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = local.redis_sg_id  # redis SG
  source_security_group_id = local.bastion_sg_id # Bastion sg
}

# RabbitMQ accepting connections from bastion
resource "aws_security_group_rule" "rabbitmq_bastion" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = local.rabbitmq_sg_id  # rabbitmq SG
  source_security_group_id = local.bastion_sg_id # Bastion sg
}

# MySQL accepting connections from bastion
resource "aws_security_group_rule" "mysql_bastion" {
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = local.mysql_sg_id  # mysql SG
  source_security_group_id = local.bastion_sg_id # Bastion sg
}

# # Catalogue accepting connections from bastion
# resource "aws_security_group_rule" "catalogue_bastion" {
#   type              = "ingress"
#   from_port         = 22
#   to_port           = 22
#   protocol          = "tcp"
#   security_group_id = local.catalogue_sg_id  # catalogue SG
#   source_security_group_id = local.bastion_sg_id # Bastion sg
# }

# # MongoDB accepting connections from catalogue
# resource "aws_security_group_rule" "mongodb_catalogue" {
#   type              = "ingress"
#   from_port         = 27017
#   to_port           = 27017
#   protocol          = "tcp"
#   security_group_id = local.mongodb_sg_id  # catalogue SG
#   source_security_group_id = local.catalogue_sg_id # Bastion sg
# }

# # Catalogue accepting traffic from backend alb
# resource "aws_security_group_rule" "catalogue_backend_alb" {
#   type              = "ingress"
#   from_port         = 8080
#   to_port           = 8080
#   protocol          = "tcp"
#   security_group_id =   local.catalogue_sg_id  # catalogue SG
#   source_security_group_id =  local.backend_alb_sg_id # backend alb sg
# }

# ingress ALB accepting traffic from my laptop
resource "aws_security_group_rule" "ingress_alb_laptop" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  security_group_id = local.ingress_alb_sg_id
  cidr_blocks       =  ["0.0.0.0/0"]
}

# eks control plane accepting traffic from bastion
resource "aws_security_group_rule" "eks_control_plane_bastion" {
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  security_group_id = local.eks_control_plane_sg_id  # eks control plane SG
  source_security_group_id = local.bastion_sg_id # Bastion sg
}

# eks nodes accepting traffic from bastion
resource "aws_security_group_rule" "eks_node_bastion" {
  type      = "ingress"
  from_port = 22
  to_port   = 22
  protocol  = "tcp"
  security_group_id = local.eks_node_sg_id  # eks node SG
  source_security_group_id = local.bastion_sg_id # Bastion sg
}

# eks control plane accepting traffic from eks nodes
resource "aws_security_group_rule" "eks_control_plane_eks_nodes" {
  type              = "ingress"
  from_port         = 0
  to_port           = 0
  protocol          = "-1"
  security_group_id = local.eks_control_plane_sg_id  # eks control plane SG
  source_security_group_id = local.eks_node_sg_id # eks node sg
}

# eks nodes accepting traffic from eks control plane
resource "aws_security_group_rule" "eks_nodes_eks_control_plane" {
  type      = "ingress"
  from_port = 0
  to_port   = 0
  protocol  = "-1"
  security_group_id = local.eks_node_sg_id  # eks node SG
  source_security_group_id = local.eks_control_plane_sg_id # eks control plane sg
}

# Node must have access to other nodes in the cluster for pod to pod communication
resource "aws_security_group_rule" "eks_nodes_vpc" {
  type      = "ingress"
  from_port = 0
  to_port   = 0
  protocol  = "-1"
  security_group_id = local.eks_node_sg_id  # eks node SG
  cidr_blocks = ["10.0.0.0/16"]
}
